--- a/product-preview-card-component/sass/layout/_footer.scss
+++ b/product-preview-card-component/sass/layout/_footer.scss
@@ -17,6 +17,6 @@ footer {
   }
 
   @include m.breakpoint(xlarge) {
-    width: 144rem;
+    width: 100%;
   }
 }
