--- a/product-preview-card-component/sass/pages/_home.scss
+++ b/product-preview-card-component/sass/pages/_home.scss
@@ -7,6 +7,10 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
+
+  @include m.breakpoint(xlarge) {
+    display: block;
+  }
 }
 
 .container {
@@ -30,11 +34,16 @@ body {
   @include m.breakpoint(xlarge) {
     min-width: 60rem;
     min-height: 45rem;
-    width: 41.67%;
-    height: 56.25%;
+    width: 41.67vw;
+    height: 56.25vh;
     max-width: none;
     max-height: none;
     //padding: 2.8rem 1.6rem 0 1.6rem;
     padding: 0;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
